@@ -48,14 +48,14 @@ typedef void *(ResourceLoadFileFun) (uio_Stream *fp, DWORD len);
 void *LoadResourceFromPath(const char *pathname, ResourceLoadFileFun fn);
 
 uio_Stream *res_OpenResFile (uio_DirHandle *dir, const char *filename, const char *mode);
-int ReadResFile (void *lpBuf, COUNT size, COUNT count, uio_Stream *fp);
-int WriteResFile (const void *lpBuf, COUNT size, COUNT count, uio_Stream *fp);
+size_t ReadResFile (void *lpBuf, size_t size, size_t count, uio_Stream *fp);
+size_t WriteResFile (const void *lpBuf, size_t size, size_t count, uio_Stream *fp);
 int GetResFileChar (uio_Stream *fp);
 int PutResFileChar (char ch, uio_Stream *fp);
 int PutResFileNewline (uio_Stream *fp);
 long SeekResFile (uio_Stream *fp, long offset, int whence);
 long TellResFile (uio_Stream *fp);
-long LengthResFile (uio_Stream *fp);
+size_t LengthResFile (uio_Stream *fp);
 BOOLEAN res_CloseResFile (uio_Stream *fp);
 BOOLEAN DeleteResFile (uio_DirHandle *dir, const char *filename);
 
